--- a/Assignment1/Temporary/test/webgl1.html
+++ b/Assignment1/Temporary/test/webgl1.html
@@ -22,16 +22,20 @@
         <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
         <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <script src="js/three.min.js"></script>
+        <script src="http://threejs.org/build/three.min.js"></script>
+        <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+        <script src="js/TextGeometry.js"></script>
+        <script src="js/optimer_bold.typeface.js"></script>
+        <script src="js/FontUtils.js"></script>
+        <script src="js/optimer_regular.typeface.js"></script>
 
+        <script src="js/webgl/Asteroids.js"></script>
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body onload="main()" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" >
+
+        <div id="myCanvas" width="600" height="450"></div>
 
         <!-- Navigation -->
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -75,6 +79,7 @@
                 <!-- /.container -->
         </nav>
 
+
         <!-- About Section -->
         <section id="about" class="container content-section text-center">
                 <div class="row">
@@ -82,7 +87,6 @@
                                 <h2>Project 1</h2>
                         </div>
                 </div>
-                <iframe scrolling="no" style="width: 600px; height: 450px" src="webgl/1.html"></iframe>
         </section>
 
         <footer></footer>
