Deleted unnessecary files, cleaned up the js repository, switching a seperate branch

--- a/Assignment2/TreesnFog.html
+++ b/Assignment2/TreesnFog.html
@@ -90,10 +90,10 @@
 
         <!-- THREEJS -->
         <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
-        <script src="js/three.min.js"></script>
-        <script src="js/TextGeometry.js"></script>
-        <script src="js/FontUtils.js"></script>
-        <script src="js/droid_sans_regular.typeface.js"></script>
+        <script src="js/three/three.min.js"></script>
+        <script src="js/three/TextGeometry.js"></script>
+        <script src="js/three/FontUtils.js"></script>
+        <script src="js/three/droid_sans_regular.typeface.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/Trees.js"></script>
