Added first person camera controls but disabled them for now

--- a/Assignment2/TreesnFog.html
+++ b/Assignment2/TreesnFog.html
@@ -94,6 +94,7 @@
         <script src="js/three/TextGeometry.js"></script>
         <script src="js/three/FontUtils.js"></script>
         <script src="js/three/droid_sans_regular.typeface.js"></script>
+        <script src="js/three/FirstPersonControls.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/Trees.js"></script>
