--- a/Assignment2/TreesnFog.html
+++ b/Assignment2/TreesnFog.html
@@ -95,6 +95,11 @@
         <script src="js/three/FontUtils.js"></script>
         <script src="js/three/droid_sans_regular.typeface.js"></script>
         <script src="js/three/FirstPersonControls.js"></script>
+        <script src="js/three/loader/Animation.js"></script>
+        <script src="js/three/loader/AnimationHandler.js"></script>
+        <script src="js/three/loader/KeyFrameAnimation.js"></script>
+        <script src="js/three/loader/ColladaLoader.js"></script>
+        <script src="js/three/stats.min.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/Trees.js"></script>
