--- a/Assignment2/TreesnFog.html
+++ b/Assignment2/TreesnFog.html
@@ -74,7 +74,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                                 <h2>Project 2</h2>
                                 <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
-                                <div id="myCanvas" width="600" height="450"></div>
+                                <div id="myCanvas"></div>
                         </div>
                 </div>
         </section>
