Improved the tree spawning function

--- a/Assignment2/TreesnFog.html
+++ b/Assignment2/TreesnFog.html
@@ -100,6 +100,7 @@
         <script src="js/three/loader/KeyFrameAnimation.js"></script>
         <script src="js/three/loader/ColladaLoader.js"></script>
         <script src="js/three/stats.min.js"></script>
+        <script src="js/three/OrbitControls.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/Trees.js"></script>
