Added initial workings of skydome - commented out music for now

--- a/Assignment2/TreesnFog.html
+++ b/Assignment2/TreesnFog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -102,6 +102,26 @@
         <script src="js/three/stats.min.js"></script>
         <script src="js/three/OrbitControls.js"></script>
 
+
+        <script type="application/x-glsl" id="sky-vertex">
+            varying vec2 vUV;
+
+            void main() {
+            vUV = uv;
+            vec4 pos = vec4(position, 1.0);
+            gl_Position = projectionMatrix * modelViewMatrix * pos;
+            }
+        </script>
+
+        <script type="application/x-glsl" id="sky-fragment">
+            uniform sampler2D texture;
+            varying vec2 vUV;
+
+            void main() {
+            vec4 sample = texture2D(texture, vUV);
+            gl_FragColor = vec4(sample.xyz, sample.w);
+            }
+        </script>  
         <!-- Assignment File -->
         <script src="js/webgl/Trees.js"></script>
 </body>
