--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -75,6 +75,12 @@
                                 <h2>Project 2</h2>
                                 <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
                                 <div id="myCanvas"></div>
+                                <div>
+                                    <p>Select the XYZ file you wish to view:</p>
+                                    <p>
+                                        <input style="background: #ffffff; color: black; margin: auto;" id="fileInput" type="file">
+                                    </p>
+                                </div>
                         </div>
                 </div>
         </section>
