Rough gui menu created

--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -78,7 +78,8 @@
                                 <div>
                                     <p>Select the XYZ file you wish to view:</p>
                                     <p>
-                                        <input style="background: #ffffff; color: black; margin: auto;" id="fileInput" type="file">
+                                        <input style="background: #ffffff; color: black; margin: auto;" id="fileInput" type="file"></input>
+                                        <input id="myInput" type="file" style="visibility:hidden" />
                                     </p>
                                 </div>
                         </div>
