--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -76,11 +77,7 @@
                                 <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
                                 <div id="myCanvas"></div>
                                 <div>
-                                    <p>Select the XYZ file you wish to view:</p>
-                                    <p>
-                                        <input style="background: #ffffff; color: black; margin: auto;" id="fileInput" type="file"></input>
                                         <input id="myInput" type="file" style="visibility:hidden" />
-                                    </p>
                                 </div>
                         </div>
                 </div>
