--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -72,14 +71,9 @@
         <!-- About Section -->
         <section id="about" class="container content-section text-center">
                 <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                                <h2>Project 2</h2>
-                                <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
-                                <div id="myCanvas"></div>
-                                <div>
-                                        <input id="myInput" type="file" style="visibility:hidden" />
-                                </div>
-                        </div>
+                        <h2>Project 2</h2>
+                        <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
+                        <div id="myCanvasLeft"></div>
                 </div>
         </section>
 
@@ -109,6 +103,7 @@
 
         <!-- Assignment File -->
         <script src="js/webgl/Moles.js"></script>
-</body>
 
+        <input id="myInput" type="file" style="visibility:hidden" />
+</body>
 </html>
