Fixed positioning of canvas and options gui

--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -73,7 +73,14 @@
                 <div class="row">
                         <h2>Project 2</h2>
                         <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
-                        <div id="myCanvasLeft"></div>
+                        <div class="row">                            
+                            <div class="col-md-4">
+                                <div id="guiOptions"></div>
+                            </div>
+                            <div class="col-md-8">
+                                <div id="myCanvasLeft"></div>
+                            </div>
+                        </div>
                 </div>
         </section>
 
