--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -73,8 +73,10 @@
                 <div class="row">
                         <h2>Project 2</h2>
                         <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
-                        <div class="row">                            
+                        <div class="row">
+                                <p id= "formulaText">Atomic Formula: </p>
                             <div class="col-md-4">
+
                                 <div id="guiOptions"></div>
                             </div>
                             <div class="col-md-8">
