Very small change

--- a/Assignment3/Moles.html
+++ b/Assignment3/Moles.html
@@ -74,7 +74,7 @@
                         <h2>Project 2</h2>
                         <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
                         <div class="row">
-                                <p id="formulaText">Test</p>
+                                <p id="formulaText">Please Select or Upload a Molecule</p>
                             <div class="col-md-4">
 
                                 <div id="guiOptions"></div>
