--- a/Assignment 4/Model.html
+++ b/Assignment 4/Model.html
@@ -101,10 +101,31 @@
         <script src="js/three/loader/ColladaLoader.js"></script>
         <script src="js/three/stats.min.js"></script>
         <script src="js/three/OrbitControls.js"></script>
-        <script src="js/three/dat.gui.min.js"></script>     
+        <script src="js/three/dat.gui.min.js"></script>
 
+
+        <script type="application/x-glsl" id="sky-vertex">
+            varying vec2 vUV;
+
+            void main() {
+            vUV = uv;
+            vec4 pos = vec4(position, 1.0);
+            gl_Position = projectionMatrix * modelViewMatrix * pos;
+            }
+        </script>
+
+        <script type="application/x-glsl" id="sky-fragment">
+            uniform sampler2D texture;
+            varying vec2 vUV;
+
+            void main() {
+            vec4 sample = texture2D(texture, vUV);
+            gl_FragColor = vec4(sample.xyz, sample.w);
+            }
+        </script>
         <!-- Assignment File -->
         <script src="js/webgl/Model.js"></script>
         <input id="myInput" type="file" style="visibility:hidden" />
+
 </body>
 </html>
