--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -101,7 +101,8 @@
         <script src="js/three/loader/ColladaLoader.js"></script>
         <script src="js/three/stats.min.js"></script>
         <script src="js/three/OrbitControls.js"></script>
-        <script src="js/three/dat.gui.min.js"></script>     
+        <script src="js/three/dat.gui.min.js"></script>
+        <script src="js/three/SkyShader.js"></script>       
 
         <!-- Assignment File -->
         <script src="js/webgl/House.js"></script>
