--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -71,7 +71,7 @@
         <!-- About Section -->
         <section id="about" class="container content-section text-center">
                 <div class="row">
-                        <h2>Project 4</h2>
+                        <h2>Final Project</h2>
                         <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
                         <div class="row">
                             <div id="myCanvasLeft"></div>
@@ -102,7 +102,7 @@
         <script src="js/three/stats.min.js"></script>
         <script src="js/three/OrbitControls.js"></script>
         <script src="js/three/dat.gui.min.js"></script>
-        <script src="js/three/SkyShader.js"></script>       
+        <script src="js/three/SkyShader.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/House.js"></script>
