Added a door SFX and began work on random animations for houses

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -103,6 +103,7 @@
         <script src="js/three/OrbitControls.js"></script>
         <script src="js/three/dat.gui.min.js"></script>
         <script src="js/three/SkyShader.js"></script>
+        <script src="js/three/GPUParticleSystem.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/House.js"></script>
