Added the sink and initial functionality for the TV

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -75,6 +75,11 @@
                         <h6>Done by - Justin Rhude, Guy Coccimiglio, William Sigouin, Michael Thomas, and Tyler Wilding</h6>
                         <div class="row">
                             <div id="myCanvasLeft"></div>
+
+                            <!--Video to be played on the TV's in the houses -->
+                            <video id="tvVideo1" style="display:none">                                
+                                <source src="videos/test.mp4" type="video/mp4">                                
+                            </video>
                         </div>
                 </div>
         </section>
