I figured id add a show to the TV

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -77,8 +77,8 @@
                             <div id="myCanvasLeft"></div>
 
                             <!--Video to be played on the TV's in the houses -->
-                            <video id="tvVideo1" style="display:none">                                
-                                <source src="videos/test.mp4" type="video/mp4">                                
+                            <video id="tvVideo1" autoplay loop style="display:none">
+                                <source src="videos/ayy_lmao.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
                         </div>
                 </div>
