--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -109,6 +109,8 @@
         <script src="js/three/dat.gui.min.js"></script>
         <script src="js/three/SkyShader.js"></script>
         <script src="js/three/GPUParticleSystem.js"></script>
+        <script src="js/three/Mirror.js"></script>
+        <script src="js/three/WaterShader.js"></script>
 
         <!-- Assignment File -->
         <script src="js/webgl/House.js"></script>
