Moved the asset function into a seperate file, saves 300lines of scrolling

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -113,6 +113,7 @@
         <script src="js/three/WaterShader.js"></script>
 
         <!-- Assignment File -->
+        <script src="js/webgl/Assets.js"></script>
         <script src="js/webgl/House.js"></script>
         <input id="myInput" type="file" style="visibility:hidden" />
 </body>
