Added more videos, the performance tanks because they are all playing in the background, I think we should implement a press 'e' for the TVs as well, and this will solve this performance problem, doesnt see too hard to do either

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -77,8 +77,20 @@
                             <div id="myCanvasLeft"></div>
 
                             <!--Video to be played on the TV's in the houses -->
-                            <video id="tvVideo1" autoplay loop style="display:none">
-                                <source src="videos/ayy_lmao.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                            <video id="tvVideo1" autoplay muted loop style="display:none">
+                                <source src="videos/video1.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                            </video>
+                            <video id="tvVideo2" autoplay muted loop style="display:none">
+                                <source src="videos/video2.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                            </video>
+                            <video id="tvVideo3" autoplay muted loop style="display:none">
+                                <source src="videos/video3.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                            </video>
+                            <video id="tvVideo4" autoplay muted loop style="display:none">
+                                <source src="videos/video4.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                            </video>
+                            <video id="tvVideo5" autoplay muted loop style="display:none">
+                                <source src="videos/video5.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
                         </div>
                 </div>
