Unmuted the videos and made them not loop since we can interact with the TVs now

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -77,19 +77,19 @@
                             <div id="myCanvasLeft"></div>
 
                             <!--Video to be played on the TV's in the houses -->
-                            <video id="tvVideo1" muted loop style="display:none">
+                            <video id="tvVideo1" style="display:none">
                                 <source src="videos/video1.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
-                            <video id="tvVideo2" muted loop style="display:none">
+                            <video id="tvVideo2" style="display:none">
                                 <source src="videos/video2.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
-                            <video id="tvVideo3" muted loop style="display:none">
+                            <video id="tvVideo3" style="display:none">
                                 <source src="videos/video3.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
-                            <video id="tvVideo4" muted loop style="display:none">
+                            <video id="tvVideo4" style="display:none">
                                 <source src="videos/video4.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
-                            <video id="tvVideo5" muted loop style="display:none">
+                            <video id="tvVideo5" style="display:none">
                                 <source src="videos/video5.ogv" type='video/ogg; codecs="theora, vorbis"'>
                             </video>
                         </div>
