Made the shader better.

--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -24,7 +24,7 @@
 
 <body onload="main()" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Fragment shader that produces a striped effect -->
+    <!-- Fragment shader that produces a wavely effect to make the TV look broken -->
     <script id="fragmentShader" type="x-shader/x-fragment">
 
         uniform float time;
@@ -33,14 +33,12 @@
         varying vec2 vUv;
 
         void main( void ) {
+            vec2 position = -2.0 + 4.0 * vUv;
 
-        vec2 position = -2.0 + 4.0 * vUv;
-
-        float r = abs( cos( (position.x * time + position.y * time) * 4.0 ) / cos( position.x + time / 32.0 ));
-        float g = abs( sin( (position.x * time + position.y * time) * 8.0 ) / sin( position.y + time / 64.0 ));
-        float b = abs( cos( (position.x * time + position.y * time) * 16.0 ) / cos( position.x + time / 128.0 ));
-        gl_FragColor = vec4( r, g, b, 1.0 );
-
+            float r = abs( cos( (position.x * time + position.y * time) * 4.0 ) / cos( position.x * time / 32.0 ));
+            float g = abs( sin( (position.x * time + position.y * time) * 8.0 ) / sin( position.y * time / 64.0 ));
+            float b = abs( cos( (position.x * time + position.y * time) * 16.0 ) / cos( position.x * time / 128.0 ));
+            gl_FragColor = vec4( r, g, b, 1.0 );
         }
 
     </script>
